# regenpfeifer

./: README.md  requirements.txt
regenpfeifer/: brief_generator.py
regenpfeifer-rs/: .gitignore  Cargo.toml  README.md
regenpfeifer-rs/assets/patterns/: left_patterns.json  right_patterns.json
regenpfeifer-rs/src/: cache.rs  emphasize.rs  generator.rs  main.rs  matcher.rs  patterns.rs  split.rs  stroke.rs
regenpfeifer-rs/test/: make_reference.py  regen_reference.json  regen_reference_words.txt  validate.py
